refactor: replace collect(Collectors.toList()) with toList() (#9817)
Replaces `.collect(Collectors.toList())` with the more concise
`Stream.toList()`, which has been available since Java 16.

Since `Stream.toList()` returns an unmodifiable list while
`Collectors.toList()` in practice returned a mutable `ArrayList`, places
where the resulting list is mutated afterwards (directly, through
`ListDataProvider.getItems()`, or through list data view methods like
`addItem`) now use `Collectors.toCollection(ArrayList::new)` to make the
mutability explicit. A few call sites also needed explicit type
arguments (e.g. `.<ColumnBase<?>> map(...)`) because the Eclipse
compiler infers stricter types than javac for `toList()`.

---------

Co-authored-by: Claude Fable 5 <noreply@anthropic.com>