@@ -17,7 +17,6 @@ package com.vaadin.flow.component.combobox.test;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import com.github.javafaker.Faker;
@@ -389,7 +388,7 @@ public class ComboBoxDemoPage extends VerticalLayout {
     private List<String> getNames(int count) {
         Faker faker = Faker.instance();
         return IntStream.range(0, count).mapToObj(i -> faker.name().fullName())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Song> createListOfSongs() {
