@@ -9,7 +9,6 @@
 package com.vaadin.flow.component.spreadsheet.test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.Assert;
 import org.junit.Before;
@@ -111,7 +110,7 @@ public class CellDeletionIT extends AbstractSpreadsheetIT {
 
     private void assertNotificationContent(String expected) {
         List<String> notifications = getNotifications().stream()
-                .map(WebElement::getText).collect(Collectors.toList());
+                .map(WebElement::getText).toList();
         Assert.assertTrue(String.format(
                 "Expected any of the notifications to contain the string '%s' but neither of them did. Notifications: '%s'",
                 expected, notifications),
